# workledger-sync

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
.claude/rules/: api.md  architecture.md  encryption.md
docs/: index.html
migrations/: 001_initial.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  repository.rs  sqlite_repo.rs  sync_id.rs  util.rs
src/handlers/: accounts.rs  admin.rs  health.rs  mod.rs  sync.rs
src/middleware/: admin_auth.rs  auth.rs  rate_limit.rs
src/models/: account.rs  entry.rs  metrics.rs  mod.rs  sync.rs
tests/: sync_integration.rs
